--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,7 +90,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url('/assets/img/profile_photo.jpg');
+      background: url('../assets/img/profile_photo.jpg');
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
