--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url("../assets/img/background.jpg");
+$home-image: url("/assets/images/background.jpg");
 $background-opacity: 0.9;
 
 @mixin easeOut {
@@ -11,7 +11,7 @@ $background-opacity: 0.9;
 @mixin background {
   @if $show-home-image {
     &#bg-img {
-      background: $home-image;
+      background-image: $home-image;
       background-attachment: fixed;
       background-size: cover;
 
